[gd_scene load_steps=2 format=3 uid="uid://s7x1xuixglw4"]

[ext_resource type="Script" uid="uid://bjehmwby3m5v6" path="res://scripts/recipe_panel.gd" id="1_yqayo"]

[node name="RecipePanel" type="VBoxContainer"]
offset_right = 65.0
offset_bottom = 40.0
script = ExtResource("1_yqayo")

[node name="ToggleButton" type="Button" parent="."]
layout_mode = 2
text = "!!"

[node name="Content" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="NameLabel" type="Label" parent="Content"]
layout_mode = 2

[node name="Label" type="Label" parent="Content"]
layout_mode = 2
text = "Etapas:"

[node name="StepList" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Label2" type="Label" parent="Content"]
layout_mode = 2
text = "Ingredientes:"

[node name="IngredientList" type="VBoxContainer" parent="Content"]
layout_mode = 2
